# azure-cli-mcp

./: .gitignore  LICENSE  README.md
.github/workflows/: continuous-integration.yml  release.yml
azure-cli-mcp-python/: .dockerignore  .gitignore  Dockerfile  INSTALLATION.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test_docker.ps1
azure-cli-mcp-python/azure_cli_mcp/: __init__.py  config.py  main.py
azure-cli-mcp-python/azure_cli_mcp/services/: __init__.py  azure_cli_service.py  azure_login_handler.py
azure-cli-mcp-python/azure_cli_mcp/web/: __init__.py  app.py
azure-cli-mcp-python/azure_cli_mcp/web/static/: index.html  main.js  styles.css
azure-cli-mcp-python/scripts/: deploy.ps1
azure-cli-mcp-python/tests/: __init__.py  test_azure_cli_service.py  test_azure_login_handler.py  test_config.py  test_integration.py  test_security.py
